--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera</title>
 </head>
 <body>
-<h1>Hi Coursera!</h1>
+<h1>Hi Coursera! I have been modified!</h1>
 </body>
 </html>
